# manga-ocr

./: pyproject.toml
